# litrpc/lit-llm.pb.gw.go
@@ -31,7 +31,7 @@ var _ = runtime.String
 var _ = utilities.NewDoubleArray
 var _ = metadata.Join
 
-func request_LLM_AnalyzeNode_0(ctx context.Context, marshaler runtime.Marshaler, client LLMClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_LLM_AnalyzeNode_0(ctx context.Context, marshaler runtime.Marshaler, client LLMClient, req *http.Request, pathParams map[string]string) (LLM_AnalyzeNodeClient, runtime.ServerMetadata, error) {
 	var protoReq AnalyzeNodeRequest
 	var metadata runtime.ServerMetadata
 
@@ -39,21 +39,44 @@ func request_LLM_AnalyzeNode_0(ctx context.Context, marshaler runtime.Marshaler,
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.AnalyzeNode(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
+	stream, err := client.AnalyzeNode(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
 
 }
 
-func local_request_LLM_AnalyzeNode_0(ctx context.Context, marshaler runtime.Marshaler, server LLMServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+var (
+	filter_LLM_AnalyzeNode_1 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_LLM_AnalyzeNode_1(ctx context.Context, marshaler runtime.Marshaler, client LLMClient, req *http.Request, pathParams map[string]string) (LLM_AnalyzeNodeClient, runtime.ServerMetadata, error) {
 	var protoReq AnalyzeNodeRequest
 	var metadata runtime.ServerMetadata
 
-	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_LLM_AnalyzeNode_1); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.AnalyzeNode(ctx, &protoReq)
-	return msg, metadata, err
+	stream, err := client.AnalyzeNode(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
 
 }
 
@@ -65,28 +88,17 @@ func local_request_LLM_AnalyzeNode_0(ctx context.Context, marshaler runtime.Mars
 func RegisterLLMHandlerServer(ctx context.Context, mux *runtime.ServeMux, server LLMServer) error {
 
 	mux.Handle("POST", pattern_LLM_AnalyzeNode_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/litrpc.LLM/AnalyzeNode", runtime.WithHTTPPathPattern("/v1/llm/analyze"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_LLM_AnalyzeNode_0(annotatedContext, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
+		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
+		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+		return
+	})
 
-		forward_LLM_AnalyzeNode_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
+	mux.Handle("POST", pattern_LLM_AnalyzeNode_1, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
+		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+		return
 	})
 
 	return nil
@@ -148,7 +160,29 @@ func RegisterLLMHandlerClient(ctx context.Context, mux *runtime.ServeMux, client
 			return
 		}
 
-		forward_LLM_AnalyzeNode_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_LLM_AnalyzeNode_0(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_LLM_AnalyzeNode_1, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/litrpc.LLM/AnalyzeNode", runtime.WithHTTPPathPattern("/v1/llm/analyze/stream"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_LLM_AnalyzeNode_1(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_LLM_AnalyzeNode_1(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -157,8 +191,12 @@ func RegisterLLMHandlerClient(ctx context.Context, mux *runtime.ServeMux, client
 
 var (
 	pattern_LLM_AnalyzeNode_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "llm", "analyze"}, ""))
+
+	pattern_LLM_AnalyzeNode_1 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "llm", "analyze", "stream"}, ""))
 )
 
 var (
-	forward_LLM_AnalyzeNode_0 = runtime.ForwardResponseMessage
+	forward_LLM_AnalyzeNode_0 = runtime.ForwardResponseStream
+
+	forward_LLM_AnalyzeNode_1 = runtime.ForwardResponseStream
 )
